[tool.poetry]
name = "page-in-one-request"
version = "0.1.0"
description = ""
authors = ["Suvan <overmind77s@gmail.com>"]
readme = "README.md"
packages = [{include = "page_in_one_request"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fake-headers = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
